--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ mysql-connector==2.2.9
 mysqlclient==2.1.0
 numpy==1.22.3
 pandas==1.4.2
+python-crontab==2.6.0
 python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
